--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ http://www.tooplate.com/view/2110-character
             <img src="img/qr-link-tooplate.png" alt="QR Code" class="tm-img-qr">
             <div>
                 <p class="tm-mb-small">Trabalho &copy; 2023</p>
-                <p>Designed by <a rel="nofollow" href="https://www.facebook.com/tooplate">Tooplate</a></p>
+                <p>Instagram <a rel="nofollow" href="https://www.instagram.com/praioucomv/">Praiou com VNTTA</a></p>
             </div>
         </div>
         <div class="item" data-desktop-seq-no="6" data-mobile-seq-no="2">
